--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <title>Einfach bezahlen</title>
 </head>
 <body>
-  <h1>Einfach bezahlen</h1>
+  <!---
+  <h1>Einfach bezahlen</h1>  
   <p>
-    <a href="bitcoin:1GxNQV9ea2oQyrKNmk5SBoLy2wCzkr6LWC?amount=0.002&label=einfach-bezahlen">Einfach bezahlen</a>
-  </p>
+    <a href="bitcoin:1GxNQV9ea2oQyrKNmk5SBoLy2wCzkr6LWC?amount=0.002&label=einfach-bezahlen">Einfach Bitcoin bezahlen</a>
+  </p>-->
+  <p>
+    <form action="/charge" method="POST">
+    <script
+      src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+      data-key="pk_test_dZKyStHNEeJDyt11t7rSjwPJ"
+      data-amount="500"
+      data-name="Einfach bezahlen"
+      data-description="\o/"
+      data-image="http://www.textfiles.com/underconstruction/HeHeartlandPines1980construct.gif"
+      data-locale="auto"
+      data-panel-label="Einfach bezahlen"
+      data-bitcoin="true"
+      data-label="Einfach bezahlen"
+      data-locale="de">
+    </script>
+  </form>
   <p>
     <img src="http://www.textfiles.com/underconstruction/HeHeartlandPines1980construct.gif" alt="under construction" />
   </p>
