proper confirmation url

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="bitcoin:1GxNQV9ea2oQyrKNmk5SBoLy2wCzkr6LWC?amount=0.002&label=einfach-bezahlen">Einfach Bitcoin bezahlen</a>
   </p>-->
   <p>
-    <form action="/charge" method="POST">
+    <form action="index.html" method="get">
     <script
       src="https://checkout.stripe.com/checkout.js" class="stripe-button"
       data-key="pk_test_dZKyStHNEeJDyt11t7rSjwPJ"
